--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -15,15 +15,29 @@
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'dev.frozenmilk.sinister.sloth.Load'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
+    }
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://repo.dairy.foundation/snapshots"
+        }
+    }
+    dependencies {
+
+        classpath "dev.frozenmilk.sinister.sloth:Load:0.0.1"
     }
 }
 
@@ -36,6 +50,9 @@ repositories {
     }
     maven {
         url = 'https://jitpack.io/'
+    }
+    maven {
+        url = "https://repo.dairy.foundation/snapshots"
     }
 }
 
@@ -50,6 +67,7 @@ dependencies {
 
     implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a02ba3fe51"
 
-    implementation "dev.frozenmilk.dairy:Core:1.0.0"
+    implementation "dev.frozenmilk.dairy:Core:2.0.0"
     implementation "dev.frozenmilk.dairy:Pasteurized:1.0.0"
+    implementation "dev.frozenmilk:Sinister:2.0.0"
 }
