rachel changes also fix meepmeep gradle

--- a/MeepMeepTesting/build.gradle
+++ b/MeepMeepTesting/build.gradle
@@ -8,6 +8,10 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
+kotlin {
+    jvmToolchain(8)
+}
+
 repositories {
     maven { url = 'https://maven.brott.dev/' }
 }
