--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -41,6 +41,7 @@ buildscript {
 }
 
 repositories {
+    mavenLocal()
     maven {
         url = 'https://maven.brott.dev/'
     }
@@ -62,12 +63,12 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.16"
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.17-SNAPSHOT-3"
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation("dev.frozenmilk:Wavedash:0.2.0-RC2")
+    implementation("dev.frozenmilk:Wavedash:0.2.1-RC-1")
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
-    implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a02ba3fe51"
+    //implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a02ba3fe51"
 
     implementation "page.j5155.roadrunner.expressway:core:0.3.7"
     implementation "page.j5155.roadrunner.expressway:ftc:0.3.7"
