--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -63,10 +63,10 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.17-SNAPSHOT-3"
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.20"
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation("dev.frozenmilk:Wavedash:0.2.1-RC-1")
+    implementation("dev.frozenmilk:Wavedash:0.2.0-RC2")
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     //implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a02ba3fe51"
 
@@ -78,4 +78,6 @@ dependencies {
     implementation "dev.frozenmilk.mercurial:Mercurial:1.0.0"
     implementation "dev.frozenmilk.sinister:Sloth:0.0.0"
     implementation "dev.frozenmilk.sinister.sloth:DashFix:0.0.0"
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
