``` feat: remove pinpoint driver, refactor arm and slides, implement new teleop, update dependencies
This commit removes the deprecated `GoBildaPinpointDriver` class.
It includes refactoring of the arm and slides subsystems.
The `ElphabaTeleOp` class is created and made functional.
`ElphabaOneDriver` was renamed from `MushroomTeleOp`
Dependencies were updated to new versions.
The MeepMeep field background alpha was reduced.
The robot bulk caching mode for the servo hub was fixed.
```

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:ftc:0.1.20"
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation("dev.frozenmilk:Wavedash:0.2.1-RC-1")
+    implementation("dev.frozenmilk:Wavedash:SNAPSHOT-590e9e3")
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     //implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a02ba3fe51"
 
@@ -75,7 +75,7 @@ dependencies {
 
     implementation "dev.frozenmilk.dairy:Core:1.0.0"
     implementation "dev.frozenmilk.dairy:Pasteurized:1.0.0"
-    implementation "dev.frozenmilk.mercurial:Mercurial:1.0.0"
+    implementation "dev.frozenmilk.mercurial:Mercurial:1.0.3"
     implementation "dev.frozenmilk.sinister:Sloth:0.0.0"
     implementation "dev.frozenmilk.sinister.sloth:DashFix:0.0.0"
 
