--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.20"
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.21-RC-3"
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
     implementation("dev.frozenmilk:Wavedash:SNAPSHOT-590e9e3")
@@ -73,7 +73,7 @@ dependencies {
     implementation "page.j5155.roadrunner.expressway:core:0.3.7"
     implementation "page.j5155.roadrunner.expressway:ftc:0.3.7"
 
-    implementation "dev.frozenmilk.dairy:Core:1.0.0"
+    implementation "dev.frozenmilk.dairy:Core:1.0.1"
     implementation "dev.frozenmilk.dairy:Pasteurized:1.0.0"
     implementation "dev.frozenmilk.mercurial:Mercurial:1.0.3"
     implementation "dev.frozenmilk.sinister:Sloth:0.0.0"
