--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -63,10 +63,12 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.21-RC-3"
+    //implementation "com.acmerobotics.roadrunner:ftc:0.1.20"
+    implementation "com.acmerobotics.roadrunner:ftc_u:0.1.21-SNAPSHOT-1"
+
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation("dev.frozenmilk:Wavedash:SNAPSHOT-590e9e3")
+    implementation("dev.frozenmilk:Wavedash:0.2.2-RC-2")
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     //implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a02ba3fe51"
 
